frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 240 10% 3.9%;
    --foreground: 60 5% 90%;
    --primary: 240 0% 90%;
    --primary-foreground: 60 0% 0%;
    --secondary: 240 4% 15%;
    --secondary-foreground: 60 5% 85%;
    --accent: 240 0% 13%;
    --accent-foreground: 60 0% 100%;
    --destructive: 0 60% 50%;
    --destructive-foreground: 0 0% 98%;
    --muted: 240 5% 25%;
    --muted-foreground: 60 5% 85%;
    --card: 240 10% 3.9%;
    --card-foreground: 60 5% 90%;
    --popover: 240 5% 15%;
    --popover-foreground: 60 5% 85%;
    --border: 240 6% 20%;
    --input: 240 6% 20%;
    --ring: 240 5% 90%;
    --chart-1: 359 2% 90%;
    --chart-2: 240 1% 74%;
    --chart-3: 240 1% 58%;
    --chart-4: 240 1% 42%;
    --chart-5: 240 2% 26%;
    --positive: 158.1 64.4% 51.6%;
    --negative: 349.7 89.2% 60.2%;
  }
}

